asset/sass/_screen.scss
/* ... */
#search-form.open {
    right: 1.5 * $base-line-height;
    position: absolute;
}

#search-form + button.search-toggle {
    bottom: 0;
    position: absolute;
    width: 1.5 * $base-line-height;
    height: 1.5 * $base-line-height;
    border-bottom: 0;
    color: darken($gray, 15%);
}

#search-form.closed + .search-toggle .icon {
    right: 0;
    border: 1px solid $gray;
    border-top: 0;

    &:after {
        content: "\f002";
        font-family: "Font Awesome 5 Free";
        font-weight: 900;
    }
}

#search-form.open + .search-toggle {
    top: $spacing-s;
    right: 0;

    &:after {
        content: "\f00d";
        font-family: "Font Awesome 5 Free";
        font-weight: 900;
    }
}

#search-form.closed [type="text"],
#search-form.closed [type="submit"],
#search-form.closed #advanced-form {
    display: none;
}

#search-form button {
    width: 1.5 * $base-line-height;
    overflow: hidden;
    text-indent: -9999px;
    position: relative;

    &:after {
        content: "\f002";
        font-family: "Font Awesome 5 Free";
        font-weight: 900;
        position: absolute;
        top: $spacing-s;
        right: 0;
        text-indent: 0;
        width: 1.5 * $base-line-height;
        text-align: center;
        cursor: pointer;
    }
}

#query:focus {
    position: relative;
    z-index: 1;
}

#advanced-form {
    background-color: #fff;
    position: absolute;
    top: 100%;
    padding: $spacing-m;
    right: 0;
    left: 0;
    border: 1px solid $gray;
    border-top: 0;
}

#advanced-form fieldset {
    margin-bottom: $spacing-m;
}

#advanced-form fieldset input {
    margin-right: $spacing-s;
}

#advanced-form p {
    margin: 0;
}

#content .blocks {
	width: 100%;
}

#content .blocks > h2:first-of-type {
    text-align: center;
    font-size: 2 * $base-font-size;
    margin-bottom: $spacing-l;
    line-height: 2 * $base-line-height;
    font-weight: normal;
}

/* Rudimentary mega menu CSS for demonstration */    

/* mega menu list */
header nav ul {
    display: block;
    position: relative;
    list-style: none;
    margin: 0;
    padding: 0;
    z-index: 15;
}

/* a top level navigation item in the mega menu */
.nav-item {
    list-style: none;
    display: inline-block;
    padding: 0;
    margin: 0;
}

/* first descendant link within a top level navigation item */
.nav-item > a {
    height: 100%;
    position: relative;
    display: inline-block;
    padding: $spacing-s $spacing-m;
    margin: 0 0 -1px 0;
    border: 1px solid transparent;
}

/* focus/open states of first descendant link within a top level 
    navigation item */
.open {
    border-bottom: 3px solid $gray;
}

.nav-item.open > a {
    padding: $spacing-s $spacing-m ($spacing-s - 3px);
}

/* open state of first descendant link within a top level 
    navigation item */
.nav-item > a.open {
    background-color: #fff;
    border-bottom: 0;
    z-index: 1;
    margin-bottom: 0;
    text-decoration: underline;
}

header nav > ul > li > .sub-nav-toggle {
    margin-left: -$spacing-m;
    position: relative;
    z-index: 1;
}

.nav-menu > .nav-item > [role="button"]:after {
    content: "\00A0\00A0\f0da";
    font-family: "Font Awesome 5 Free";
    font-weight: 900;
    display: inline-block;
    width: $spacing-l;
}

.nav-menu > .nav-item > [aria-expanded="true"]:after {
    content: "\00A0\00A0\f0d7";
}

a.parent {
    font-weight: bold;
}

a.parent:after {
    content: ":";
}

/* sub-navigation panel */
.sub-nav {
    position: absolute;
    display: none;
    border: 1px solid #dedede;
    border-width: 1px 0;
    background-color: #fff;
    
    &.first {
        max-width: 100%;
        margin: 0 auto;
        padding: 0 $spacing-m;
    }
}

.first.open.sub-nav > ul > li > ul > li {
    width: 25%;
}

.first.open.sub-nav ul ul ul {
    display: block;
    padding-left: $spacing-l;
}

@media screen and (min-width: 1100px) {
    .sub-nav.first {
        max-width: calc(1100px - 1.25%);
    }
}

/* sub-navigation panel open state */
.open.sub-nav,
.open.sub-nav ul {
    display: flex;
    flex-wrap: wrap;
    top: 100%;
    left: 0;
    right: 0;
    z-index: 999;
}

.sub-nav-group .sub-nav-group {
    margin-right: $spacing-l;
}

/* list of items within sub-navigation panel */
.sub-nav ul {
    margin: 0;
    padding: 0;
    display: block;
}

.open.sub-nav > ul {
    width: 100%;
    display: block;
}

.open.sub-nav ul {
    position: static;
    border: 0;

    li {
        padding: $spacing-s;
    }

    li a:not(.parent) {
        padding-left: $spacing-l;
        text-indent: -$spacing-l;
        display: inline-block;
    }

    li a:not(.parent):before {
        content: "\25C6";
        display: inline-block;
        width: $spacing-l;
        margin-right: (-.5 * $spacing-s);
        text-indent: 0;
    }
}

.sub-nav .sub-nav-toggle {
    display: none;
}

/* list item within sub-navigation panel */
.sub-nav li {
    display: block;
    list-style-type: none;
    margin: 0;
    padding: $spacing-m;
    position: relative;
}    

/* @end */

/* @group ----- Footer ----- */

footer {
    margin-top: (2 * $spacing-l);
    clear: both;
}

#bottom-nav li {
    display: inline-block;
    margin-right: 1em;
    font-size: .875 * $base-font-size;
}

/* @end */

/* @group ----- Browse ----- */

#sort-links {
    display: inline-block;

    ul {
        @include de-list;
        display: inline-block;
    }

    li {
        display: inline-block;
        margin: 0 .5em;
    }

    a {
        color: $dark-gray;
    }

    .sorting a {
        color: $red;
    }
}

.browse-controls {
    display: flex;
    flex-wrap: wrap;
    justify-content: space-between;
    align-items: center;
    width: 100%;

    & > * {
        margin-bottom: $spacing-m;
        margin-right: $spacing-l;
    }

    & + .resource-list {
        margin-top: -1 * $spacing-m;
    }
}

.sorting {
    margin: 0;
}

.sorting > * {
    margin-bottom: $spacing-m;
}

.sorting select {
    max-width: 10rem;
}
/* ... */

